# udppipes

./: .gitignore  CMakeLists.txt  LICENSE  mk
sources/cmdline/: CMakeLists.txt  main-cmdline.cpp
sources/cmdline/testapi/: testapi.hpp
sources/commons/: CMakeLists.txt  debug.cpp  debug.h  logger.cpp  logger.hpp  macros.h  queue.cpp  queue.hpp  spinlock.hpp  threader.cpp  threader.hpp  types.h  utils.cpp  utils.hpp
sources/commons/apple/: NSLoggerBackend.m
sources/commons/tests/: test-threader.cpp
sources/sockets/: CMakeLists.txt  udpaddress.cpp  udpaddress.hpp  udpdgram.cpp  udpdgram.hpp  udpengine.cpp  udpengine.hpp  udppipe.cpp  udppipe.hpp
sources/sockets/tests/: test-udpengine.cpp
